added "src" to CSS and JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4feb1262.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
   </head>
 <body>
     <div class="container">
@@ -233,6 +233,6 @@
         </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
