--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
             </div>
         </div>
         </div>
+        <a href="https://hopeful-booth-4723d9.netlify.app/">
+          Open source code
+        </a>
+        <p>
+          by Emilie Albert-Toth
+        </p>
     </div>
     <script src="src/app.js"></script>
 </body>
