updated CSS of open-source-code link

--- a/index.html
+++ b/index.html
@@ -232,12 +232,14 @@
             </div>
         </div>
         </div>
-        <a href="https://hopeful-booth-4723d9.netlify.app/">
-          Open source code
-        </a>
-        <p>
-          by Emilie Albert-Toth
-        </p>
+        <div class="open-source-code">
+          <a href="https://hopeful-booth-4723d9.netlify.app/" id="code-link" target="_blank">
+            Open source code
+          </a>
+          <span>
+            by Emilie Albert-Toth
+          </span>
+        </div>
     </div>
     <script src="src/app.js"></script>
 </body>
