updated GitHub repository link

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
         </div>
         <div class="open-source-code">
-          <a href="https://hopeful-booth-4723d9.netlify.app/" id="code-link" target="_blank">
+          <a href="https://github.com/ealberttoth/emilie-weather-app" id="code-link" target="_blank">
             Open source code
           </a>
           <span>
