Removed C link and merged C + F into same span

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
         <div class="current-temp">
           <span id="current-temp"></span>
             <span class="current-scale">
-              <a href="" id="current-celsius">
-              °C
-              </a>
+              <span id="current-celsius">
+                °C |
+              </span>
+                <a href="" id="current-fahrenheit">
+                  °F
+                </a>
             </span>
-            <span class="current-scale">
-              <a href="" id="current-fahrenheit">
-              | °F
-              </a>
-            </span>
+  
             <span class="current-temp-emoji">
                 🌨
             </span>
