added classes "clearfix" and "float-left" to html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <span class="current-date" id="current-date"></span>
         
         <div class="current-temp">
+          <div class="clearfix">
+            <div class="float-left">
           <span id="current-temp"></span>
             <span class="current-scale">
               <span id="current-celsius">
@@ -59,6 +61,8 @@
             <span class="current-temp-emoji">
                 🌨
             </span>
+            </div>
+            </div>
         </div> 
             
         <br />
