styled current temperature section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <span id="current-celsius">
                 °C |
               </span>
-                <a href="" id="current-fahrenheit">
+                <a href="#" id="current-fahrenheit" style="text-decoration: none;">
                   °F
                 </a>
             </span>
