--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
                 </a>
             </span>
   
-            <span class="current-temp-emoji">
-                🌨
+            <span>
+              <img 
+              src="" 
+              alt="" 
+              id="icon"
+              class="current-temp-emoji">
             </span>
             </div>
             </div>
