Added autocomplete off

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <div class="col-3">
         <input type="submit" 
               value="Search" 
-              class="form-control btn btn-primary shadow">
+              class="form-control btn btn-primary shadow"
+              autocomplete="off"/>
               </div>
               </div>
       </form>
