Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <div class="float-left">
           <span id="current-temp"></span>
             <span class="current-scale">
-              <span id="current-celsius">
+                <a href="#" class="active" id="current-celsius" style="text-decoration: none;">
                 °C |
-              </span>
+                </a>
                 <a href="#" id="current-fahrenheit" style="text-decoration: none;">
                   °F
                 </a>
